--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,6 @@ lazy_static = "1.4.0"
 logs = "0.7.1"
 regex = "1.5.5"
 tokio = { version = "1.18.5", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "time", "sync"] }
+env_logger = "0.9.0"
+log = "0.4.17"
+chrono = "0.4.31"
